--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
       <div class="containerindex">
         <div class="column-left">
           <h1> WHAT WE DO</h1>
-          <p>
-            We provide sustainable solutions. 
-          </p>
+          <p>We provide sustainable solutions through the power of GIS</p>
+          <p>When in doubt, map it out!</p>
         
         </div>
         <div class = "column-right"> 
@@ -114,7 +113,7 @@
     <section class="background2">
       <div class = "container2">
           <div class = "center">
-              <h1> GR8 Knows All </h1>
+              <h1> Vibe check: </h1>
               <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
               <button onclick = "myButton()">Book a consultation now</button>
           </div>
