--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="card">
           <img src="image/grace.jpg" alt="Grace" class= "responsive3">
           <div class="container">
-            <h2>Grace Kim</h2>
+            <h2 class="naming">Grace Kim</h2>
             <p class="title">CEO &amp; Founder</p>
             <p class="textingg">Some text that describes Grace.</p>
             <p class="textingg">grace@example.com</p>
@@ -74,7 +74,7 @@
         <div class="card">
           <img src="image/chris1.jpg" alt="Chris" class= "responsive3">
           <div class="container">
-            <h2>Chris Broom</h2>
+            <h2 class="naming">Chris Broom</h2>
             <p class="title">Director &amp; Co-Founder</p>
             <p class="textingg">Some text that describes Chris.</p>
             <p class="textingg">chris@example.com</p>
@@ -86,7 +86,7 @@
         <div class="card">
           <img src="image/ryan1.JPG" alt="ryan" class="responsive3">
           <div class="container">
-            <h2>Ryan Bye</h2>
+            <h2 class="naming">Ryan Bye</h2>
             <p class="title">Risk Management Director</p>
             <p class="texting">Some text that describes Ryan.</p>
             <p class="texting">ryan@example.com</p>
@@ -98,7 +98,7 @@
         <div class="card">
           <img src="image/Will1.jpg" alt="Will" class= "responsive3">
           <div class="container">
-            <h3>William Inglis</h3>
+            <h3 class="naming">William Inglis</h3>
             <p class="title">Lead Designer</p>
             <p class="textingg">I am your trip planner</p>
             <p class="textingg">don'temailme@leavemealone.com</p>
