html code spacing for bottom sections

--- a/aboutus.html
+++ b/aboutus.html
@@ -61,7 +61,7 @@
                 <li>Hurricane path projection and preparedness</li>
                 <li>Adding value for businesses</li>
             </ul>
-            <button onclick = "RButton()"> View Product </button>
+            <button onclick="RButton()"> View Product </button>
         </div>
         <div class="column-right centergeneral">
             <p id="nameid">Chris</p>
@@ -72,7 +72,7 @@
                 <li>Urban planing analysis</li>
                 <li>Digitizing</li>
             </ul>
-            <button onclick = "CButton()"> View Product</button>
+            <button onclick="CButton()">View Product</button>
             <p id="nameid">William</p>
             <h3>Implementation of trip planning for provincal parks in Ontario</h3>
             <ul>
@@ -80,27 +80,26 @@
                 <li>Make the perfect itinerary for your trip</li>
                 <li>Use behind the scene coding to get you where you need to go the most efficiently</li>
             </ul>
-            <button onclick = "WButton()"> View Product </button>
+            <button onclick="WButton()">View Product</button>
         </div>
     </div>
 
-    <!-- Concluding remarks and button to contact us page-->   
-    <section class="background2">
-        <div class = "container2">
-            <div class = "center">
-                <h1> GR8 Knows All </h1>
-                <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
-                <button onclick = "myButton()">Book a consultation now</button>
+     <!-- Concluding remarks and button to contact us page-->   
+     <section class="background2">
+        <div class="container2">
+            <div class="center">
+                <h1>If you'd like to learn more...</h1>
+                <p>Get in reach with one of our GIS specialists today!</p>
+                <button onclick = "myButton()">Book a Consultation</button>
             </div>
-             <!--Back to Top Button-->
+            <!--Back to Top Button-->
             <div>
                 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
             </div>
         </div>
-    </section>
-
-    
-
-</body>
-<script src="Script.js"></script>
-</html>
+      </section>
+  
+    </body>
+    <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
+  
+  </html>
