--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -63,21 +63,21 @@
     </section>
 
     <!-- Concluding remarks and button to contact us page-->   
-      <section class="background2">
-        <div class = "container2">
-            <div class = "center">
-                <h1> Afraid of being blown or swept away? </h1>
-                <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
-                <button onclick = "myButton()">Book a consultation now</button>
-            </div>
-              <!--Back to Top Button-->
-            <div>
-              <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-            </div>
+    <section class="background2">
+      <div class="container2">
+          <div class="center">
+              <h1>If you'd like to learn more...</h1>
+              <p>Get in reach with one of our GIS specialists today!</p>
+              <button onclick = "myButton()">Book a Consultation</button>
           </div>
-      </section>
-  
+          <!--Back to Top Button-->
+          <div>
+              <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+          </div>
+      </div>
+    </section>
+
   </body>
   <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
 
-  </html>
+</html>
