code spacing fix

--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -101,20 +101,20 @@
           </div>
     </div>
 
-    <!-- Concluding remarks and button to contact us page-->   
-    <section class="background2">
-      <div class = "container2">
-          <div class = "center">
-              <h1> Get concrete answers to your city's infrastructure problems </h1>
-              <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
-              <button onclick = "myButton()">Book a consultation now</button>
-          </div>
-           <!--Back to Top Button-->
-           <div>
+  <!-- Concluding remarks and button to contact us page-->   
+  <section class="background2">
+    <div class="container2">
+        <div class="center">
+            <h1>If you'd like to learn more...</h1>
+            <p>Get in reach with one of our GIS specialists today!</p>
+            <button onclick = "myButton()">Book a Consultation</button>
+        </div>
+         <!--Back to Top Button-->
+        <div>
             <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-          </div>
-      </div>
-  </section>
+        </div>
+    </div>
+</section>
 
     </body>
     <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
