--- a/contact.html
+++ b/contact.html
@@ -72,17 +72,22 @@
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       </div>
         
-            <!-- Concluding remarks and button to contact us hom page-->   
-        <div class = "container2">
-            <div class = "center">
-                <h1> Interested in our services? </h1>
-                <p> You are in the right place! If you'd like to learn more, get in reach with one of our GIS specialists by using our contact information above today</p>
-            </div>
-        </div>
-    </section>
+    <!-- Concluding remarks and button to contact us page-->   
+    <section class="background2">
+      <div class="container2">
+          <div class="center">
+              <h1>If you'd like to learn more...</h1>
+              <p>Get in reach with one of our GIS specialists today!</p>
+              <button onclick = "myButton()">Book a Consultation</button>
+          </div>
+          <!--Back to Top Button-->
+          <div>
+              <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+          </div>
+      </div>
     </section>
 
-   
   </body>
-</html>
+  <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
 
+</html>
