--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -87,22 +87,22 @@
   </html>
 
 
-    <<!-- Concluding remarks and button to contact us page-->   
+    <!-- Concluding remarks and button to contact us page-->   
     <section class="background2">
-      <div class = "container2">
-          <div class = "center">
-              <h1> Interested in our services? </h1>
-              <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
-              <button onclick = "myButton()">Book a consultation now</button>
+      <div class="container2">
+          <div class="center">
+              <h1>If you'd like to learn more...</h1>
+              <p>Get in reach with one of our GIS specialists today!</p>
+              <button onclick = "myButton()">Book a Consultation</button>
           </div>
           <!--Back to Top Button-->
           <div>
               <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
           </div>
       </div>
-  </section>
+    </section>
 
-    </body>
-    <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
+  </body>
+  <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
+
 </html>
-
