--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -121,5 +121,6 @@
     <script>
     let 
     slideIndex = 1; 
-    showSlides(slideIndex);</script>
+    showSlides(slideIndex);
+    </script>
 </html>
