--- a/gallery.html
+++ b/gallery.html
@@ -114,4 +114,10 @@
   </body>
   
   <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
+  
+  <script>
+    let 
+    slideIndex = 1; 
+    showSlides(slideIndex);
+    </script>
 </html>
