--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -41,7 +41,7 @@
 
     <section class="background1">
       <div class="containerindex">
-        <div class="column-left centergeneral">
+        <div class="column-left">
           <h1> Applying Core Risk Management Principles to Disaster Risk Management(DRM)</h1>
           <p> Businesses can leverage the recent experiences and basic risk management principles to develop proactive DRM strategies. The basic principles of risk management can and should be applied for Disaster Risk Management (DRM) to:</p>
           <ul>
@@ -57,7 +57,7 @@
               <p>Companies must implement processes for proactive monitoring of events that present heightened risk, including natural and man-made disasters. Companies also need to implement tracking and reporting to evaluate mid-to-long term impacts that may be detected after risk events subside.</p>
           </ul>
         </div> 
-        <div class="column-right centergeneral">
+        <div class="column-right">
           <img src="image/drmcycle.jpg" alt="drmcycle" class="responsive3">
         </div>
       </div>
