--- a/WillProduct.html
+++ b/WillProduct.html
@@ -107,7 +107,7 @@
       <div class="container2">
           <div class="center">
               <h1>If you'd like to learn more...</h1>
-              <p>Get in reach with one of our GIS specialists today!</p>
+              <p>Get in touch with one of our GIS specialists today!</p>
               <button onclick = "myButton()">Book a Consultation</button>
           </div>
           <!--Back to Top Button-->
