--- a/gallery.html
+++ b/gallery.html
@@ -45,38 +45,48 @@
 
       <!-- Full-width images with number text -->
           <div class="mySlides">
-            <div class="numbertext">1 / 7</div>
+            <div class="numbertext">1 / 9</div>
             <img src="image/BikeMap1.png" alt="Bike Map 1 of Hamilton" class="image1">
           </div>
   
           <div class="mySlides">
-            <div class="numbertext">2 / 7</div>
+            <div class="numbertext">2 / 9</div>
             <img src="image/BikeMap2.png" alt="Bike Map 2 of Hamilton" class="image1">
           </div>
   
           <div class="mySlides">
-            <div class="numbertext">3 / 7</div>
+            <div class="numbertext">3 / 9</div>
             <img src="image/BikeMap3.png" alt="Bike Map 3 of Hamilton" class="image1">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">4 / 7</div>
+            <div class="numbertext">4 / 9</div>
             <img src="image/BikeMap4.png" alt="Traffic flow analysis" class="image1">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">5 / 7</div>
+            <div class="numbertext">5 / 9</div>
             <img src="image/TravelPhoto.jpg" alt="Travel Photo" class="image1">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">6 / 7</div>
+            <div class="numbertext">6 / 9</div>
             <img src="image/ChrisMapTopo.jpg" alt="Topographic Map" class="image1">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">7 / 7</div>
+            <div class="numbertext">7 / 9</div>
             <img src="image/ChirsMapGrey.jpg" alt="Greyscale Map" class="image1">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">8 / 9</div>
+            <img src="image/hurricanepathing1.jpg" alt="Hurricane Pathing" class="image1">
+          </div>
+
+          <div class="mySlides">
+            <div class="numbertext">9 / 9</div>
+            <img src="image/cyclones1.jpg" alt="Cyclone Pathing" class="image1">
           </div>
   
           <!-- Next and previous buttons -->
@@ -87,6 +97,7 @@
           <div class="caption-container">
             <p id="caption">Generated Maps</p>
           </div>
+          
   
           <!-- Thumbnail images -->
           <div class="row">
@@ -110,6 +121,12 @@
             </div>
             <div class="column">
               <img class="demo cursor" src="image/ChirsMapGrey.jpg" alt="Greyscale Map" onclick="currentSlide(7)">
+            </div>
+            <div class="column">
+              <img class="demo cursor" src="image/hurricanepathing1.jpg" alt="Hurricane Pathing" onclick="currentSlide(8)">
+            </div>
+            <div class="column">
+              <img class="demo cursor" src="image/cyclones1.jpg" alt="Cyclone Pathing" onclick="currentSlide(9)">
             </div>
           </div>
     </div>
