--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -43,8 +43,8 @@
       <header>
         <h1> Applying Core Risk Management Principles to Disaster Risk Management(DRM)</h1>
       </header>
-      <div class="container4">
-        <div class="column-left">
+      <div class="container31">
+        <div>
           <p id="PLayout2"> Businesses can leverage the recent experiences and basic risk management principles to develop proactive DRM strategies. The basic principles of risk management can and should be applied for Disaster Risk Management (DRM) to:</p>
           <ol>
             <li>Identify and Predict risk</li>
