testing image float

--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -60,7 +60,7 @@
           </ol>
         </div> 
         <div class="column-right">
-          <img src="image/drmcycle.jpg" alt="drmcycle">
+          <img src="image/drmcycle.jpg" alt="drmcycle" class="imager.floaterl">
         </div>
       </div>
     </section>
