I think I got it...

--- a/index.html
+++ b/index.html
@@ -62,86 +62,58 @@
       <div class="roww">
         <div class="columnn">
           <div class="cardd">
-            <img src="/w3images/team1.jpg" alt="Jane">
+            <img src="image/grace.jpg" alt="Grace">
             <div class="containerr">
-              <h2>Jane Doe</h2>
+              <h2>Grace Kim</h2>
               <p class="titlee">CEO & Founder</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-              <p>example@example.com</p>
-              <p><button class="button3">Contact</button></p>
+              <p>Some text that describes Grace.</p>
+              <p>grace@example.com</p>
+              <p><button class="button3">Contact Grace</button></p>
             </div>
           </div>
         </div>
 
         <div class="columnn">
           <div class="cardd">
-            <img src="/w3images/team2.jpg" alt="Mike">
+            <img src="image/chris1.jpg" alt="Chris">
             <div class="containerr">
-              <h2>Mike Ross</h2>
-              <p class="titlee">Art Director</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-              <p>example@example.com</p>
-              <p><button class="button3">Contact</button></p>
+              <h2>Chris Broom</h2>
+              <p class="titlee">Digital Products Director</p>
+              <p>Some text that describes Chris.</p>
+              <p>chris@example.com</p>
+              <p><button class="button3">Contact Chris</button></p>
             </div>
           </div>
         </div>
         
         <div class="columnn">
           <div class="cardd">
-            <img src="/w3images/team3.jpg" alt="John">
+            <img src="image/ryan1.JPG" alt="Ryan">
             <div class="containerr">
-              <h2>John Doe</h2>
-              <p class="titlee">Designer</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-              <p>example@example.com</p>
-              <p><button class="button3">Contact</button></p>
+              <h2>Ryan Bye</h2>
+              <p class="titlee">Director of Risk Management</p>
+              <p>Some text that describes Ryan.</p>
+              <p>ryan@example.com</p>
+              <p><button class="button3">Contact Ryan</button></p>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="columnn">
+        <div class="cardd">
+          <img src="image/Will1.jpg" alt="Will">
+          <div class="containerr">
+            <h2>William Ingles</h2>
+            <p class="titlee">Trip Planning Cartographer</p>
+            <p>Some text that describes Will.</p>
+            <p>dontcontactme@example.com</p>
+            <p><button class="button3">DON'T CLICK</button></p>
+          </div>
+        </div>
+      </div>
+    </div>
     </section>
-    
-    <!-- <div class="row">
-      <div class="column">
-        <div class="card">
-          <img src="image/grace.jpg" alt="Grace" class="responsive3">
-          <div class="container">
-            <h2 class="naming">Grace Kim</h2>
-            <p class="title">CEO &amp; Founder</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="column">
-        <div class="card">
-          <img src="image/chris1.jpg" alt="Chris" class="responsive3">
-          <div class="container">
-            <h2 class="naming">Chris Broom</h2>
-            <p class="title">Director &amp; Co-Founder</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="column">
-        <div class="card">
-          <img src="image/ryan1.JPG" alt="ryan" class="responsive3">
-          <div class="container">
-            <h2 class="naming">Ryan Bye</h2>
-            <p class="title">Risk Management Director</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="column">
-        <div class="card">
-          <img src="image/Will1.jpg" alt="Will" class= "responsive3">
-          <div class="container">
-            <h3 class="naming">William Inglis</h3>
-            <p class="title">Lead Designer</p>
-          </div>
-        </div>
-      </div>
-    </div> -->
 
     <!-- Concluding remarks and button to contact us page-->   
     <section class="background2">
