--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-      <h2>Meet The GIS Squad</h2>
+      <h2>Meet the GIS Squad</h2>
       <p>We're here and ready to meet your needs!</p>
       <br>
 
