--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="roww">
         <div class="columnn">
           <div class="cardd">
-            <img src="image/grace.jpg" alt="Grace">
+            <img src="image/grace.jpg" alt="Grace" class="responsive3">
             <div class="containerr">
               <h2>Grace Kim</h2>
               <p class="titlee">CEO & Founder</p>
@@ -75,7 +75,7 @@
 
         <div class="columnn">
           <div class="cardd">
-            <img src="image/chris1.jpg" alt="Chris">
+            <img src="image/chris1.jpg" alt="Chris" class="responsive3">
             <div class="containerr">
               <h2>Chris Broom</h2>
               <p class="titlee">Digital Products Director</p>
@@ -88,7 +88,7 @@
         
         <div class="columnn">
           <div class="cardd">
-            <img src="image/ryan1.JPG" alt="Ryan">
+            <img src="image/ryan1.JPG" alt="Ryan" class="responsive3">
             <div class="containerr">
               <h2>Ryan Bye</h2>
               <p class="titlee">Director of Risk Management</p>
@@ -102,7 +102,7 @@
 
       <div class="columnn">
         <div class="cardd">
-          <img src="image/Will1.jpg" alt="Will">
+          <img src="image/Will1.jpg" alt="Will" class="responsive3">
           <div class="containerr">
             <h2>William Ingles</h2>
             <p class="titlee">Trip Planning Cartographer</p>
