--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </div>
       </div>
 
-      <h2>Meet the GIS Squad</h2>
-      <p>We're here and ready to meet your needs!</p>
+      <h2 class="headerr">Meet the GIS Squad</h2>
+      <p class="headerr">We're here and ready to meet your needs!</p>
       <br>
 
       <div class="roww">
