fixed spaces. Added img to gallery

--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -42,7 +42,7 @@
               <p id="PLayout2">
                 Does your city support implementation of safe bike infrastructure? What kind of impact do separated bike lanes have on the traffic flow? Get the answers to this question through <i> GR8 Consulting</i> </p>
      
-              <p id = "PLayout2">
+              <p id="PLayout2">
                 The methods involve developing a topologically correct street network with updated capacity and employing numerous scenarios to evaluate the overall impact on traffic from separated bike lanes. The first scenario is the base case scenario, where capacity remains untouched. The subsequent scenarios employ a reduction in capacity on traffic lanes with existing narrow bike lanes by 25%, 50%, 75%, and 100%.
               </p>
             </div>
@@ -107,7 +107,7 @@
         <div class="center">
             <h1>If you'd like to learn more...</h1>
             <p>Get in reach with one of our GIS specialists today!</p>
-            <button onclick = "myButton()">Book a Consultation</button>
+            <button onclick="myButton()">Book a Consultation</button>
         </div>
          <!--Back to Top Button-->
         <div>
@@ -118,9 +118,11 @@
 
     </body>
     <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
+    
+    <!-- Call in script specific for this page.-->
     <script>
     let 
-    slideIndex = 1; 
+    slideIndex=1; 
     showSlides(slideIndex);
     </script>
 </html>
