--- a/gallery.html
+++ b/gallery.html
@@ -78,6 +78,11 @@
             <div class="numbertext">7 / 7</div>
             <img src="image/ChirsMapGrey.jpg" alt="Greyscale Map" class="image1">
           </div>
+
+          <div class="mySlides">
+            <div class="numbertext">7 / 7</div>
+            <img src="image/GTHA1.jpg" alt="Population Density of Toronto-Markham area" class="image1">
+          </div>
   
           <!-- Next and previous buttons -->
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -111,6 +116,9 @@
             <div class="column">
               <img class="demo cursor" src="image/ChirsMapGrey.jpg" alt="Greyscale Map" onclick="currentSlide(7)">
             </div>
+            <div class="column">
+              <img class="demo cursor" src="image/GTHA1.jpg" alt="Population Density of Toronto-Markham area" onclick="currentSlide(8)">
+            </div>
           </div>
     </div>
 
@@ -119,9 +127,10 @@
   
   <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
   
+  <!-- Call in script specific for this page.-->
   <script>
     let 
-    slideIndex = 1; 
+    slideIndex=1; 
     showSlides(slideIndex);
     </script>
 </html>
