--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Site Metas-->
     <title>GR8 Consulting / Home Page</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css">
   
   </head>
 
@@ -48,7 +48,7 @@
           <p>When in doubt, map it out!</p>
         
         </div>
-        <div class = "column-right"> 
+        <div class="column-right"> 
 
           <IMG src="image/earth.gif" alt="earth gif" class="gif">
 
