--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -41,7 +41,7 @@
 
     <section class="background1">
       <header>
-        <h1> Applying Core Risk Management Principles to Disaster Risk Management(DRM)</h1>
+        <h1 class="header3"> Applying Core Risk Management Principles to Disaster Risk Management(DRM)</h1>
       </header>
       <div class="container31">
         <div>
