--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -59,10 +59,18 @@
               <p>Companies must implement processes for proactive monitoring of events that present heightened risk, including natural and man-made disasters. Companies also need to implement tracking and reporting to evaluate mid-to-long term impacts that may be detected after risk events subside.</p>
           </ol>
         </div> 
-        <div class="column-right">
-          <img src="image/drmcycle.jpg" alt="drmcycle" class="imagerr">
+        
+        <div class="roww3">
+          <div class="columnn3">
+            <img src="img_snow.jpg" alt="Snow" class="responsive2">
+          </div>
+          <div class="columnn3">
+            <img src="img_forest.jpg" alt="Forest" class="responsive2">
+          </div>
+          <div class="columnn3">
+            <img src="img_mountains.jpg" alt="Mountains" class="responsive2">
+          </div>
         </div>
-      </div>
     </section>
 
     <!-- Concluding remarks and button to contact us page-->   
