--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -104,5 +104,12 @@
 
   </body>
   <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
-
+  <script>
+    // Get the button:
+      let mybutton = document.getElementById("myBtn");
+      
+      // When the user scrolls down 20px from the top of the document, show the button
+      window.onscroll = function() {scrollFunction()};
+      
+    </script>
 </html>
