--- a/gallery.html
+++ b/gallery.html
@@ -66,7 +66,7 @@
 
           <div class="mySlides">
             <div class="numbertext">5 / 8</div>
-            <img src="image/TravelPhoto.jpg" alt="Travel Photo" class="image1">
+            <img src="image/GTHA1.png" alt="GTHA population density" class="image1">
           </div>
 
           <div class="mySlides">
