--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="containerr">
               <h2>William Ingles</h2>
               <p class="titlee">Trip Planning Cartographer</p>
-              <p>Some text that describes Will.</p>
+              <p>Some text that describes how awesome Will is as a Trip Planner.his is my final plea: I am great, not to be confused with gr8 consonsulting, which could save you hundreds on trip planning costs. So, stop calling me."</p>
               <p>dontcontactme@example.com</p>
               <p><button class="button3">DON'T CLICK</button></p>
             </div>
