--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -62,13 +62,13 @@
         
         <div class="roww3">
           <div class="columnn3">
-            <img src="img_snow.jpg" alt="Snow" class="responsive2">
+            <img src="image/hmapping.jpg" alt="Hurricane Map" class="responsive2">
           </div>
           <div class="columnn3">
-            <img src="img_forest.jpg" alt="Forest" class="responsive2">
+            <img src="image/hseason.jpg" alt="Hurricane Eye" class="responsive2">
           </div>
           <div class="columnn3">
-            <img src="img_mountains.jpg" alt="Mountains" class="responsive2">
+            <img src="image/hsign.jpg" alt="Hurricane Season" class="responsive2">
           </div>
         </div>
     </section>
