--- a/gallery.html
+++ b/gallery.html
@@ -110,7 +110,7 @@
               <img class="demo cursor" src="image/BikeMap4.png" alt="Traffic flow analysis" onclick="currentSlide(4)">
             </div>
             <div class="column">
-              <img class="demo cursor" src="image/TravelPhoto.jpg" alt="TravelPhoto" onclick="currentSlide(5)">
+              <img class="demo cursor" src="image/GTHA1.png" alt="GTHA Population Density" onclick="currentSlide(5)">
             </div>
             <div class="column">
               <img class="demo cursor" src="image/ChrisMapTopo.jpg" alt="Topographic Map" onclick="currentSlide(6)">
