--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             <div class="containerr">
               <h2>Ryan Bye</h2>
               <p class="titlee">Director of Risk Management</p>
-              <p>Some text that describes Ryan.</p>
-              <p>ryan@example.com</p>
-              <p><button class="button3">Contact Ryan</button></p>
+              <p>Do I really need to be on here? Of course - it was my own idea!</p>
+              <p>ryanisnothere@example.ca</p>
+              <p><button class="button3">Ignore me</button></p>
             </div>
           </div>
         </div>
