--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="cardd">
             <img src="image/Will1.jpg" alt="Will" class="responsive3">
             <div class="containerr">
-              <h2>William Ingles</h2>
+              <h2>William Inglis</h2>
               <p class="titlee">Trip Planning Cartographer</p>
               <p>Some text that describes how awesome Will is as a Trip Planner. This is my final plea: I am great, not to be confused with GR8 consulting, which could save you hundreds on trip planning costs. So, stop calling me."</p>
               <p>dontcontactme@example.com</p>
