--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -40,10 +40,10 @@
           <div class="container2">
             <div class="center">
               <h1> Bike Infrastructure Implementation</h1>
-              <p class="PLayout2">
+              <p id="PLayout2">
                 Does your city support implementation of safe bike infrastructure? What kind of impact do separated bike lanes have on the traffic flow? Get the answers to this question through <i> GR8 Consulting</i> </p>
      
-              <p class="PLayout2">
+              <p id="PLayout2">
                 The methods involve developing a topologically correct street network with updated capacity and employing numerous scenarios to evaluate the overall impact on traffic from separated bike lanes. The first scenario is the base case scenario, where capacity remains untouched. The subsequent scenarios employ a reduction in capacity on traffic lanes with existing narrow bike lanes by 25%, 50%, 75%, and 100%.
               </p>
             </div>
