--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -13,13 +13,13 @@
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <nav class="navbar">
       <div class="logo">GR8 Consulting</div>
-          <ul class="nav-links">
+          <div class="nav-links">
               <input type="checkbox" id="checkbox_toggle" />
               <label for="checkbox_toggle" class="hamburger">&#9776;</label>  
               <div class="menu">
-              <li class="list1"><a href="index.html">Home</a></li>
-              <li class="list1"><a href="aboutus.html">About</a></li>     
-              <li class="services list1">
+              <div class="list1"><a href="index.html">Home</a></div>
+              <div class="list1"><a href="aboutus.html">About</a></div>     
+              <div class="services list1">
               <a href="#">Products</a>
               <!-- DROPDOWN MENU -->
               <ul class="dropdown-content">
@@ -28,11 +28,12 @@
                   <li class="list2"><a href="WillProduct.html">William</a></li>
                   <li class="list2"><a href="hurricanemanagement.html">Ryan</a></li>
               </ul>
-              </li>
-              <li class="list1"><a href="gallery.html">Gallery</a></li>
-              <li class="list1"><a href="contact.html">Contact Us</a></li>
               </div>
-          </ul>
+              </li>
+              <div class="list1"><a href="gallery.html">Gallery</a></div>
+              <div class="list1"><a href="contact.html">Contact Us</a></div>
+              
+          </div>
       </nav>
   <!-- Navigation End. Keep this consistent throughout the pages-->
 
