--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8" >
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" >
         <title>Bike Infrastructure</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="styles.css" >
     </head>
     
 
@@ -14,7 +14,7 @@
     <nav class="navbar">
       <div class="logo">GR8 Consulting</div>
           <div class="nav-links">
-              <input type="checkbox" id="checkbox_toggle" />
+              <input type="checkbox" id="checkbox_toggle" >
               <label for="checkbox_toggle" class="hamburger">&#9776;</label>  
               <div class="menu">
               <div class="list1"><a href="index.html">Home</a></div>
@@ -29,12 +29,11 @@
                   <li class="list2"><a href="hurricanemanagement.html">Ryan</a></li>
               </ul>
               </div>
-              </li>
               <div class="list1"><a href="gallery.html">Gallery</a></div>
               <div class="list1"><a href="contact.html">Contact Us</a></div>
-              
-          </div>
-      </nav>
+          </div>    
+      </div>
+    </nav>
   <!-- Navigation End. Keep this consistent throughout the pages-->
 
     <section class="background1">
