--- a/index.html
+++ b/index.html
@@ -17,27 +17,29 @@
 
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <nav class="navbar">
-    <div class="logo">GR8 Consulting</div>
-      <ul class="nav-links">
-        <input type="checkbox" id="checkbox_toggle"/>
-        <label for="checkbox_toggle" class="hamburger">&#9776;</label>  
-        <div class="menu">
-          <li class="list1"><a href="index.html">Home</a></li>
-          <li class="list1"><a href="aboutus.html">About</a></li>     
-          <li class="services list1">
-          <a href="#">Products</a>
-          <!-- DROPDOWN MENU -->
-          <ul class="dropdown-content">
-            <li class="list2"><a href="ChrisProduct.html">Chris</a></li>
-            <li class="list2"><a href="bikeinfrastructure.html">Grace</a></li>
-            <li class="list2"><a href="WillProduct.html">William</a></li>
-            <li class="list2"><a href="hurricanemanagement.html">Ryan</a></li>
-          </ul>
-          </li>
-          <li class="list1"><a href="gallery.html">Gallery</a></li>
-          <li class="list1"><a href="contact.html">Contact Us</a></li>
+      <div class="logo">GR8 Consulting</div>
+          <div class="nav-links">
+              <input type="checkbox" id="checkbox_toggle" >
+              <label for="checkbox_toggle" class="hamburger">&#9776;</label>  
+              <div class="menu">
+              <div class="list1"><a href="index.html">Home</a></div>
+              <div class="list1"><a href="aboutus.html">About</a></div>     
+              <div class="services list1">
+              <a href="#">Products</a>
+              <!-- DROPDOWN MENU -->
+              <ul class="dropdown-content">
+                  <li class="list2"><a href="ChrisProduct.html">Chris</a></li>
+                  <li class="list2"><a href="bikeinfrastructure.html">Grace</a></li>
+                  <li class="list2"><a href="WillProduct.html">William</a></li>
+                  <li class="list2"><a href="hurricanemanagement.html">Ryan</a></li>
+              </ul>
+              </div>
+              <div class="list1"><a href="gallery.html">Gallery</a></div>
+              <div class="list1"><a href="contact.html">Contact Us</a></div>
+          </div>    
+      </div>
     </nav>
-    <!-- Navigation End. Keep this consistent throughout the pages-->
+  <!-- Navigation End. Keep this consistent throughout the pages-->
 
     
     <section class="background1">
