--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -15,7 +15,7 @@
 
   <body>
 
-    <!-- Navigation Start. Keep this consistent throughout the pages-->
+    <!--Navigation Start. Keep this consistent throughout the pages-->
     <nav class="navbar">
       <div class="logo">GR8 Consulting</div>
           <div class="nav-links">
@@ -26,7 +26,7 @@
               <div class="list1"><a href="aboutus.html">About</a></div>     
               <div class="services list1">
               <a href="#">Products</a>
-              <!-- DROPDOWN MENU -->
+              <!--DROPDOWN MENU -->
               <ul class="dropdown-content">
                   <li class="list2"><a href="ChrisProduct.html">Chris</a></li>
                   <li class="list2"><a href="bikeinfrastructure.html">Grace</a></li>
@@ -39,7 +39,7 @@
           </div>    
       </div>
     </nav>
-  <!-- Navigation End. Keep this consistent throughout the pages-->
+  <!--Navigation End. Keep this consistent throughout the pages-->
 
     <section class="background1">
       <header>
@@ -47,21 +47,26 @@
       </header>
       <div class="container31">
         <div>
-          <p> Businesses can leverage the recent experiences and basic risk management principles to develop proactive DRM strategies. The basic principles of risk management can and should be applied for Disaster Risk Management (DRM) to:</p>
+          <p> Businesses can leverage the recent experiences and basic risk management principles to develop proactive DRM strategies. The basic principles of 
+            risk management can and should be applied for Disaster Risk Management (DRM) to:</p>
           <ol>
             <li>Identify and Predict risk</li>
               <p>Businesses with offices or assets in regions that are likely targets for high severity weather events should identify disasters as strategic risks.</p>
             <li>Assess Risk</li>
               <p>Businesses need to incorporate disaster risk considerations into portfolio analytics, modeling assumptions and forecasting.</p>
             <li>Develop Risk Response and Control Plan:</li>
-              <p>Businesses ought to define thresholds and triggers that exceed risk appetite and/or present unacceptable heightened risks. These metrics will be incorporated into a risk management plan that outlines required response actions, stakeholders involved and desired mitigation outcomes.</p>
+              <p>Businesses ought to define thresholds and triggers that exceed risk appetite and/or present unacceptable heightened risks. These metrics will be 
+                incorporated into a risk management plan that outlines required response actions, stakeholders involved and desired mitigation outcomes.</p>
             <li>DRM Communication Plan:</li>
-              <p>Organizations should apply an active communication plan for all stages of DRM. Communication approaches and methods should be defined from early stages of event monitoring through to communication during incident response, including considerations for business resiliency tactics.</p>
+              <p>Organizations should apply an active communication plan for all stages of DRM. Communication approaches and methods should be defined from early 
+                stages of event monitoring through to communication during incident response, including considerations for business resiliency tactics.</p>
             <li>Risk Monitoring and Analysis:</li>
-              <p>Companies must implement processes for proactive monitoring of events that present heightened risk, including natural and man-made disasters. Companies also need to implement tracking and reporting to evaluate mid-to-long term impacts that may be detected after risk events subside.</p>
+              <p>Companies must implement processes for proactive monitoring of events that present heightened risk, including natural and man-made disasters. 
+                Companies also need to implement tracking and reporting to evaluate mid-to-long term impacts that may be detected after risk events subside.</p>
           </ol>
         </div> 
-        
+
+        <!--Place pictures side-by-side-->
         <div class="roww3">
           <div class="columnn3">
             <img src="image/hmapping.jpg" alt="Hurricane Map" class="responsive2">
@@ -75,7 +80,7 @@
         </div>
     </section>
 
-    <!-- Concluding remarks and button to contact us page-->   
+    <!--Concluding remarks and button to contact us page-->   
     <section class="background2">
       <div class="container2">
           <div class="center">
@@ -89,7 +94,7 @@
           </div>
       </div>
     </section>
-    <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
+    <script src="Script.js"></script> <!--Call in script.js for button and other functions-->
     <script>
       // Get the button:
         let mybutton = document.getElementById("myBtn");
