--- a/aboutus.html
+++ b/aboutus.html
@@ -43,7 +43,7 @@
     </section>
     <div class="containerindex">
         <div class="column-left centergeneral">
-            <p id="nameid">Grace</p>
+            <p class="nameid">Grace</p>
             <h3>Implementation of separated bike lanes (consult, planning) in a city</h3>
             <ul>
                 <li>Access road network</li>
@@ -52,7 +52,7 @@
                 <li>Aid in city planning and traffic flow analysis</li>
             </ul>
             <button onclick = "GButton()"> View Product </button>
-            <p id="nameid">Ryan</p>
+            <p class="nameid">Ryan</p>
             <h3>Implementation of disaster management and mitigation for/from hurricanes</h3>
             <ul>
                 <li>Building disaster management frameworks</li>
@@ -62,7 +62,7 @@
             <button onclick="RButton()">View Product</button>
         </div>
         <div class="column-right centergeneral">
-            <p id="nameid">Chris</p>
+            <p class="nameid">Chris</p>
             <h3>Mapping, digitizing, and planning</h3>
             <ul>
                 <li>Topographic mapping services</li>
@@ -71,7 +71,7 @@
                 <li>Digitizing</li>
             </ul>
             <button onclick="CButton()">View Product</button>
-            <p id="nameid">William</p>
+            <p class="nameid">William</p>
             <h3>Implementation of trip planning for provincal parks in Ontario</h3>
             <ul>
                 <li>Trip Planner and aspiring aquafit instructor</li>
