--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -51,19 +51,19 @@
             risk management can and should be applied for Disaster Risk Management (DRM) to:</p>
           <ol>
             <li>Identify and Predict risk</li>
-            <p>Businesses with offices or assets in regions that are likely targets for high severity weather events should identify disasters as strategic 
-               risks.</p>
+              <dt>Businesses with offices or assets in regions that are likely targets for high severity weather events should identify disasters as strategic 
+                  risks.</dt>
             <li>Assess Risk</li>
-            <p>Businesses need to incorporate disaster risk considerations into portfolio analytics, modeling assumptions and forecasting.</p>
+              <dt>Businesses need to incorporate disaster risk considerations into portfolio analytics, modeling assumptions and forecasting.</dt>
             <li>Develop Risk Response and Control Plan:</li>
-            <p>Businesses ought to define thresholds and triggers that exceed risk appetite and/or present unacceptable heightened risks. These metrics will 
-               be incorporated into a risk management plan that outlines required response actions, stakeholders involved and desired mitigation outcomes.</p>
+              <dt>Businesses ought to define thresholds and triggers that exceed risk appetite and/or present unacceptable heightened risks. These metrics will 
+                  be incorporated into a risk management plan that outlines required response actions, stakeholders involved and desired mitigation outcomes.</dt>
             <li>DRM Communication Plan:</li>
-            <p>Organizations should apply an active communication plan for all stages of DRM. Communication approaches and methods should be defined from early 
-              stages of event monitoring through to communication during incident response, including considerations for business resiliency tactics.</p>
+              <dt>Organizations should apply an active communication plan for all stages of DRM. Communication approaches and methods should be defined from early 
+                  stages of event monitoring through to communication during incident response, including considerations for business resiliency tactics.</dt>
             <li>Risk Monitoring and Analysis:</li>
-            <p>Companies must implement processes for proactive monitoring of events that present heightened risk, including natural and man-made disasters. 
-               Companies also need to implement tracking and reporting to evaluate mid-to-long term impacts that may be detected after risk events subside.</p>
+              <dt>Companies must implement processes for proactive monitoring of events that present heightened risk, including natural and man-made disasters. 
+                  Companies also need to implement tracking and reporting to evaluate mid-to-long term impacts that may be detected after risk events subside.</dt>
           </ol>
         </div> 
 
