--- a/aboutus.html
+++ b/aboutus.html
@@ -18,8 +18,8 @@
                 <div class="list1"><a href="index.html">Home</a></div>
                 <div class="list1"><a href="aboutus.html">About</a></div>     
                     <div class="services list1">
-                    <ul class="dropdown-content">
                     <a href="#">Products</a>
+                    <ul class="dropdown-content"></ul>
                     <!-- DROPDOWN MENU -->
                         <li class="list2"><a href="ChrisProduct.html">Chris</a></li>
                         <li class="list2"><a href="bikeinfrastructure.html">Grace</a></li>
