--- a/WillProduct.html
+++ b/WillProduct.html
@@ -41,7 +41,7 @@
     </div>
     <div class='container3'>
       <img class='resize_fit_center'
-        src='image/willy.JPG' alt="Will and Friends"/>
+        src='image/willy.JPG' alt="Will and Friends">
   </div>
   <p id="Section70">
     You guessed it! - I'm the handsome fella in the middle
@@ -97,7 +97,7 @@
 <section class="background0000">
     <div class="center">
   <img class='resize_fit_center'
-      src='image/TravellPhoto.jpg' alt="TravelPhoto"/>
+      src='image/TravellPhoto.jpg' alt="TravelPhoto">
     </div>
   </section>
 
