--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,7 @@
         <div class="nav-links">
             <input type="checkbox" id="checkbox_toggle" >
             <label for="checkbox_toggle" class="hamburger">&#9776;</label>  
-            <div class="menu">
+        <li><div class="menu">
                 <div class="list1"><a href="index.html">Home</a></div>
                 <div class="list1"><a href="aboutus.html">About</a></div>     
                 <div class="services list1">
@@ -29,7 +29,7 @@
                 </div>
                 <div class="list1"><a href="gallery.html">Gallery</a></div>
                 <div class="list1"><a href="contact.html">Contact Us</a></div>
-            </div>    
+            </div></li>   
         </div>
       </nav>
     <!-- Navigation End. Keep this consistent throughout the pages-->
